visitor-ip component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-visitor-ip></app-visitor-ip>
+
 <nav>
   <a routerLink="/Standings"> Standings </a>
   <a [routerLink]="'/Scoring'"> Scoring </a>
